<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="aditivos">Aditivos</string>
    <string name="app_name">Cibus</string>
    <string name="buscarAditivo">Buscar Aditivo EXXX/nombre</string>
    <string name="buscarAlimento">Buscar Alimento</string>
    <string name="cantidad">Cantidad</string>
    <string name="caracter">Carácter</string>
    <string name="caracterAditivo">Inofensivo | Sospechoso | Peligroso</string>
    <string name="categorias">Categorías</string>
    <string name="consultaAditivosTitle">CONSULTA ADITIVOS</string>
    <string name="consultaAlimentosTitle">CONSULTA ALIMENTOS</string>
    <string name="contentFlechita">Flecha de extend y collapse</string>
    <string name="descripcion_">Descripción:</string>
    <string name="descripcionAditivo">Descripción Aditivo</string>
    <string name="descripcionAlimento">Descripcion Alimento</string>
    <string name="detalleAlimento">Detalle Alimento</string>
    <string name="exampleAditivo">E-XXX</string>
    <string name="formato">Formato</string>
	<string name="formatoAlimento">Formato Alimento</string>
    <string name="imagenAtras">Flecha de volver atrás</string>
	<string name="imagenLupa">Imagen Lupa</string>
    <string name="infoIcono">Icono de aplicación</string>
	<string name="marca">Marca</string>
    <string name="marcaAlimento">Marca Alimento</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_">Nombre:</string>
    <string name="nombreAditivo">Nombre Aditivo</string>
    <string name="nombreAlimento">Nombre Alimento</string>
    <string name="notFound">No se han encontrado resultados.</string>
    <string name="nutrientes">Nutrientes (100g/ml)</string>
    <string name="scanCode">Escanear\nCódigo</string>   
    <string name="submarca">Submarca</string>
    <string name="submarcaAlimento">Submarca Alimento</string>
    <string name="tipo">Tipo</string>
    <string name="tipoAditivo">Tipo Aditivo</string>
    <string name="tipoAlimento">Tipo Alimento</string>
    <string name="valorMedio100">Valor medio 100g</string>
    <string name="consultaFiltrosTitle">FILTRADO ALIMENTOS</string>
    <string name="misFiltros">Mis filtros</string>
    <string name="filtrosDefault">Filtros predefinidos</string>
    <string name="selectFiltro">Utilizar filtro</string>
    <string name="detalleFiltro">Detalle filtro</string>
    <string name="eliminarFiltro">Suprimir filtro</string>
    <string name="editarFiltro">Editar filtro</string>
    <string name="newFiltro">Crear nuevo filtro</string>
    <string name="reglas">Reglas</string>
    <string name="textoIlustra">Aceptar alimentos que cumplan:</string>
    <string name="plus">+</string>
    <string name="textoBotonAdd">Añadir regla</string>
    <string name="selecciona">Selecciona la característica a filtrar:</string>
    <string name="selecciona2">Selecciona el criterio de filtrado:</string>
    <string name="hintFiltro">Escribe el elemento buscado</string>
    <string name="inofensivo">Inofensivo</string>
    <string name="sospechoso">Sospechoso</string>
    <string name="peligroso">Peligroso</string>
    <string name="descripcion">Descripción (opcional)</string>
    <string name="newRegla">Definir regla</string>
    <string name="textSemaforo">Resultado filtro</string>
    <string name="semaforo">Imagen que muestra la validez del filtrado de un alimento.</string>
    <string name="mensajeFiltrado">Alimento X [no/] cumple con los criterios establecidos.</string>
    <string name="mensajeReglaFail">Violación de la regla X.</string>
    <string name="consultaAditivos">Consulta Aditivos</string>
    <string name="consultaAlimentos">Consulta Alimentos</string>
    <string name="consultaFiltros">Consulta Filtros</string>
    <string name="sinDescripcion">Sin descripción</string>
    <string name="entradaManual">Entrada Manual</string>
    <string name="entrada_Manual">Entrada\nManual</string>
    <string name="nuevoAlimento">Nuevo Alimento</string>
    <string name="aboutCibus">About cibus</string>
    <string name="undefined">Sin definir</string>
    <string name="addIngrediente">Añadir Ingrediente</string>
    <string name="addNutriente">Añadir Nutriente</string>
    <string name="addAditivo">Añadir Aditivo</string>
    <string name="addAlimento">Añadir Alimento</string>
    <string name="codigoBarras">Código de Barras</string>    

</resources>