<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD">

    <RelativeLayout
        android:id="@+id/barraSup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFF8000"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/boton_atras_style"
            android:onClick="pulsaAtras" />

        <AutoCompleteTextView
            android:id="@+id/textoBuscar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/botonBack"
            android:hint="@string/buscarAlimento"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:visibility="gone" >

            <requestFocus />
        </AutoCompleteTextView>

		<TextView
		    android:id="@+id/consultaAlimento"
			android:text="@string/consultaAlimentos"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
			android:layout_toRightOf="@id/botonBack"
		    android:gravity="center|left"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/botonLupa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"            
            android:background="@drawable/boton_buscar_style"
            android:onClick="pulsaBuscar" />
        
        

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barraSup"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botonScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="scanCode"
            android:text="@string/scanCode"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <Button
            android:id="@+id/botonEntradaM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/entrada_Manual"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:onClick="entradaManual" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textoCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/categorias"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <ListView
        android:id="@+id/listaCategoriasAlimentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoCategorias"
        android:layout_marginLeft="24dp" >
    </ListView>


</RelativeLayout>