<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD">
    
    <LinearLayout
        android:id="@+id/barraSup0"
       	android:layout_width="match_parent"
       	android:layout_height="48dp"
       	android:background="#FFFF8000"
       	android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/infoIcono"
            android:paddingTop="1dp"
            android:src="@drawable/ic_launcher" />
    
	    <TextView
	        android:id="@+id/textBarraTitulo"
	        android:text="@string/app_name"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"	        
			android:gravity="center|left"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#FFFFFFFF" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barraSup0"
        android:orientation="vertical">
           
        <Button
            android:id="@+id/botonConsultaAditivos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/boton_background_green"
            android:drawableLeft="@drawable/ic_aditivo"
            android:drawablePadding="2dp"
            android:onClick="pulsaAditivos"
            android:text="@string/consultaAditivosTitle"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />
        
        <Button
            android:id="@+id/botonConsultaAlimentos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/boton_background_red"
            android:drawableLeft="@drawable/ic_coke"
            android:drawablePadding="2dp"
            android:onClick="pulsaAlimentos"
            android:text="@string/consultaAlimentosTitle"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />
        
        <Button
            android:id="@+id/botonConsultaFiltros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/boton_background_blue"
            android:drawableLeft="@drawable/ic_filter"
            android:drawablePadding="2dp"
            android:onClick="pulsaFiltros"
            android:text="@string/consultaFiltrosTitle"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />
	        
    </LinearLayout>

</RelativeLayout>